# prisma-python-unofficial

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  pyproject.toml
src/: lib.rs
